// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`axes configs > axes area/riemann stable 1`] = `
{
  "areas": [
    {
      "closed": true,
      "fill": "#F59E0B",
      "listening": false,
      "opacity": 0.4,
      "points": [
        -64,
        -33.333333333333314,
        -61.866666666666674,
        -31.148148148148152,
        -59.73333333333332,
        -29.037037037037038,
        -57.599999999999994,
        -27,
        -55.46666666666667,
        -25.037037037037038,
        -53.33333333333334,
        -23.148148148148167,
        -51.20000000000002,
        -21.333333333333343,
        -49.06666666666666,
        -19.59259259259258,
        -46.93333333333334,
        -17.925925925925924,
        -44.80000000000001,
        -16.33333333333333,
        -42.66666666666667,
        -14.81481481481481,
        -40.53333333333333,
        -13.370370370370367,
        -38.400000000000006,
        -11.999999999999986,
        -36.266666666666666,
        -10.70370370370371,
        -34.133333333333326,
        -9.481481481481495,
        -32,
        -8.333333333333329,
        -29.866666666666674,
        -7.259259259259252,
        -27.73333333333335,
        -6.259259259259252,
        -25.599999999999994,
        -5.333333333333343,
        -23.46666666666667,
        -4.481481481481481,
        -21.333333333333343,
        -3.7037037037036953,
        -19.19999999999999,
        -3,
        -17.066666666666663,
        -2.370370370370381,
        -14.933333333333337,
        -1.8148148148148238,
        -12.800000000000011,
        -1.3333333333333428,
        -10.666666666666657,
        -0.9259259259259238,
        -8.533333333333331,
        -0.5925925925925952,
        -6.400000000000006,
        -0.3333333333333144,
        -4.2666666666666515,
        -0.14814814814813815,
        -2.1333333333333258,
        -0.03703703703703809,
        0,
        0,
        2.1333333333333258,
        -0.03703703703703809,
        4.2666666666666515,
        -0.14814814814813815,
        6.400000000000006,
        -0.3333333333333428,
        8.533333333333303,
        -0.5925925925925952,
        10.666666666666686,
        -0.9259259259259238,
        12.800000000000011,
        -1.3333333333333428,
        14.933333333333337,
        -1.8148148148148238,
        17.066666666666663,
        -2.370370370370381,
        19.19999999999999,
        -3,
        21.333333333333314,
        -3.7037037037036953,
        23.46666666666667,
        -4.481481481481481,
        25.599999999999994,
        -5.333333333333343,
        27.73333333333335,
        -6.259259259259252,
        29.866666666666674,
        -7.259259259259252,
        32,
        -8.333333333333329,
        34.133333333333326,
        -9.481481481481495,
        36.26666666666665,
        -10.70370370370371,
        38.400000000000006,
        -12.000000000000014,
        40.53333333333336,
        -13.370370370370367,
        42.666666666666686,
        -14.81481481481481,
        44.80000000000001,
        -16.33333333333333,
        46.93333333333334,
        -17.925925925925924,
        49.06666666666666,
        -19.59259259259258,
        51.19999999999999,
        -21.333333333333343,
        53.333333333333314,
        -23.148148148148138,
        55.46666666666667,
        -25.037037037037038,
        57.599999999999966,
        -26.999999999999986,
        59.73333333333335,
        -29.037037037037038,
        61.866666666666674,
        -31.148148148148124,
        64,
        -33.333333333333314,
        64,
        0,
        -64,
        0,
      ],
    },
  ],
  "rects": [
    {
      "fill": "#10B981",
      "height": 33.333333333333314,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": -64,
      "y": -33.333333333333314,
    },
    {
      "fill": "#10B981",
      "height": 18.75,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": -48,
      "y": -18.75,
    },
    {
      "fill": "#10B981",
      "height": 8.333333333333329,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": -32,
      "y": -8.333333333333329,
    },
    {
      "fill": "#10B981",
      "height": 2.0833333333333286,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": -16,
      "y": -2.0833333333333286,
    },
    {
      "fill": "#10B981",
      "height": 0,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": 0,
      "y": 0,
    },
    {
      "fill": "#10B981",
      "height": 2.0833333333333286,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": 16,
      "y": -2.0833333333333286,
    },
    {
      "fill": "#10B981",
      "height": 8.333333333333329,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": 32,
      "y": -8.333333333333329,
    },
    {
      "fill": "#10B981",
      "height": 18.75,
      "listening": false,
      "opacity": 0.45,
      "stroke": "#fff",
      "strokeWidth": 0.5,
      "width": 16,
      "x": 48,
      "y": -18.75,
    },
  ],
}
`;

exports[`axes configs > axes graph curves stable 1`] = `
[
  {
    "listening": false,
    "points": [
      -160,
      -208.33333333333337,
      -156,
      -198.046875,
      -152,
      -188.02083333333337,
      -148,
      -178.25520833333337,
      -144,
      -168.75,
      -140,
      -159.50520833333337,
      -136,
      -150.52083333333334,
      -132,
      -141.796875,
      -128,
      -133.33333333333334,
      -124,
      -125.13020833333334,
      -120,
      -117.1875,
      -116,
      -109.50520833333334,
      -112,
      -102.08333333333334,
      -108,
      -94.921875,
      -104,
      -88.02083333333331,
      -100,
      -81.38020833333331,
      -96,
      -75,
      -92,
      -68.88020833333331,
      -88,
      -63.020833333333314,
      -84,
      -57.421875,
      -80,
      -52.083333333333314,
      -76,
      -47.005208333333314,
      -72,
      -42.1875,
      -68,
      -37.630208333333314,
      -64,
      -33.333333333333314,
      -60,
      -29.296875,
      -56,
      -25.52083333333333,
      -52,
      -22.00520833333333,
      -48,
      -18.75,
      -44,
      -15.755208333333329,
      -40,
      -13.020833333333329,
      -36,
      -10.546875,
      -32,
      -8.333333333333329,
      -28,
      -6.380208333333329,
      -24,
      -4.6875,
      -20,
      -3.2552083333333286,
      -16,
      -2.0833333333333286,
      -12,
      -1.171875,
      -8,
      -0.5208333333333286,
      -4,
      -0.1302083333333286,
      0,
      0,
      4,
      -0.1302083333333286,
      8,
      -0.5208333333333286,
      12,
      -1.171875,
      16,
      -2.0833333333333286,
      20,
      -3.2552083333333286,
      24,
      -4.6875,
      28,
      -6.380208333333329,
      32,
      -8.333333333333329,
      36,
      -10.546875,
      40,
      -13.020833333333329,
      44,
      -15.755208333333329,
      48,
      -18.75,
      52,
      -22.00520833333333,
      56,
      -25.52083333333333,
      60,
      -29.296875,
      64,
      -33.333333333333314,
      68,
      -37.630208333333314,
      72,
      -42.1875,
      76,
      -47.005208333333314,
      80,
      -52.083333333333314,
      84,
      -57.421875,
      88,
      -63.020833333333314,
      92,
      -68.88020833333331,
      96,
      -75,
      100,
      -81.38020833333331,
      104,
      -88.02083333333331,
      108,
      -94.921875,
      112,
      -102.08333333333334,
      116,
      -109.50520833333334,
      120,
      -117.1875,
      124,
      -125.13020833333334,
      128,
      -133.33333333333334,
      132,
      -141.796875,
      136,
      -150.52083333333334,
      140,
      -159.50520833333337,
      144,
      -168.75,
      148,
      -178.25520833333337,
      152,
      -188.02083333333337,
      156,
      -198.046875,
      160,
      -208.33333333333337,
    ],
    "stroke": "#F59E0B",
    "strokeWidth": 3,
    "tension": 0.3,
  },
]
`;

exports[`axes configs > axes x ticks stable 1`] = `
[
  {
    "listening": false,
    "points": [
      -150,
      -4,
      -150,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      -120,
      -4,
      -120,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      -90,
      -4,
      -90,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      -60,
      -4,
      -60,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      -29.999999999999993,
      -4,
      -29.999999999999993,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      29.999999999999993,
      -4,
      29.999999999999993,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      59.999999999999986,
      -4,
      59.999999999999986,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      90.00000000000001,
      -4,
      90.00000000000001,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      120,
      -4,
      120,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
  {
    "listening": false,
    "points": [
      150,
      -4,
      150,
      4,
    ],
    "stroke": "#9CA3AF",
    "strokeWidth": 1,
  },
]
`;

exports[`data-object configs > dot_grid dots stable 1`] = `
[
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": -16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": 0,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": -16,
    "y": 16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 0,
    "y": 16,
  },
  {
    "fill": "#FFFFFF",
    "listening": false,
    "radius": 2,
    "x": 16,
    "y": 16,
  },
]
`;

exports[`data-object configs > dot_grid hit cfg stable 1`] = `
{
  "fill": "rgba(0,0,0,0.01)",
  "height": 36,
  "listening": true,
  "width": 36,
  "x": -18,
  "y": -18,
}
`;

exports[`data-object configs > graph edges stable 1`] = `
[
  {
    "lineCap": "round",
    "listening": false,
    "points": [
      -16,
      0,
      16,
      0,
    ],
    "stroke": "#94a3b8",
    "strokeWidth": 1.5,
  },
]
`;

exports[`data-object configs > graph hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 80,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 80,
  "x": -40,
  "y": -40,
}
`;

exports[`data-object configs > graph labels stable 1`] = `
[
  {
    "align": "center",
    "fill": "#4ceef9",
    "fontSize": 10,
    "listening": false,
    "text": "A",
    "width": 24,
    "x": -28,
    "y": -13.2,
  },
  {
    "align": "center",
    "fill": "#4ceef9",
    "fontSize": 10,
    "listening": false,
    "text": "B",
    "width": 24,
    "x": 4,
    "y": -13.2,
  },
]
`;

exports[`data-object configs > graph vertices stable 1`] = `
[
  {
    "fill": "#4ceef9",
    "listening": false,
    "radius": 3.2,
    "stroke": "#94a3b8",
    "strokeWidth": 1,
    "x": -16,
    "y": 0,
  },
  {
    "fill": "#4ceef9",
    "listening": false,
    "radius": 3.2,
    "stroke": "#94a3b8",
    "strokeWidth": 1,
    "x": 16,
    "y": 0,
  },
]
`;

exports[`data-object configs > group cfg stable 1`] = `
{
  "draggable": true,
  "id": "grp1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "x": 484,
  "y": 266,
}
`;

exports[`data-object configs > matrix brackets stable 1`] = `
[
  {
    "listening": false,
    "points": [
      -21.76,
      -22.08,
      -25.6,
      -22.08,
      -25.6,
      22.08,
      -21.76,
      22.08,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
  {
    "listening": false,
    "points": [
      21.76,
      -22.08,
      25.6,
      -22.08,
      25.6,
      22.08,
      21.76,
      22.08,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
]
`;

exports[`data-object configs > matrix cells stable 1`] = `
[
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "1",
    "width": 32,
    "x": -36.480000000000004,
    "y": -26.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "2",
    "width": 32,
    "x": 4.48,
    "y": -26.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "3",
    "width": 32,
    "x": -36.480000000000004,
    "y": 10.240000000000002,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 10,
    "listening": false,
    "text": "4",
    "width": 32,
    "x": 4.48,
    "y": 10.240000000000002,
  },
]
`;

exports[`data-object configs > matrix hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 48,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 64,
  "x": -32,
  "y": -24,
}
`;

exports[`data-object configs > polar circles stable 1`] = `
[
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 20,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 40,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 60,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
  {
    "fill": "transparent",
    "listening": false,
    "opacity": 0.6,
    "radius": 80,
    "stroke": "#64748b",
    "strokeWidth": 0.5,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`data-object configs > polar spokes stable 1`] = `
[
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      80,
      0,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      69.2820323027551,
      39.99999999999999,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      40.00000000000001,
      69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      4.898587196589413e-15,
      80,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -39.999999999999986,
      69.2820323027551,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -69.2820323027551,
      39.99999999999999,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -80,
      9.797174393178826e-15,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -69.28203230275508,
      -40.00000000000001,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -40.000000000000036,
      -69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      -1.4695761589768237e-14,
      -80,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      40.00000000000001,
      -69.28203230275508,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.6,
    "points": [
      0,
      0,
      69.28203230275507,
      -40.000000000000036,
    ],
    "stroke": "#64748b",
    "strokeWidth": 0.5,
  },
]
`;

exports[`data-object configs > table cells stable 1`] = `
[
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "a",
    "verticalAlign": "middle",
    "width": 40,
    "x": -40,
    "y": -28,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "b",
    "verticalAlign": "middle",
    "width": 40,
    "x": 0,
    "y": -28,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "c",
    "verticalAlign": "middle",
    "width": 40,
    "x": -40,
    "y": 0,
  },
  {
    "align": "center",
    "fill": "#FFFFFF",
    "fontSize": 9,
    "height": 28,
    "listening": false,
    "text": "d",
    "verticalAlign": "middle",
    "width": 40,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`data-object configs > table grid lines stable 1`] = `
[
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      -28,
      40,
      -28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      0,
      40,
      0,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      28,
      40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      -40,
      -28,
      -40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      0,
      -28,
      0,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
  {
    "listening": false,
    "opacity": 0.4,
    "points": [
      40,
      -28,
      40,
      28,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 0.5,
  },
]
`;

exports[`data-object configs > table hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.04)",
  "height": 56,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 80,
  "x": -40,
  "y": -28,
}
`;

exports[`data-object configs > vector field arrows stable 1`] = `
[
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -98.89829784152248,
      -60.84744676228372,
      -111.10170215847752,
      -79.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -100.27073061568417,
      -40.06853429293677,
      -109.72926938431583,
      -59.93146570706323,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -101.97806759312884,
      -19.423236575950945,
      -108.02193240687116,
      -40.576763424049055,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -103.95709998109206,
      0.9504501985334723,
      -106.04290001890794,
      -20.950450198533474,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -106.04290001890794,
      20.950450198533474,
      -103.95709998109206,
      -0.9504501985334723,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -108.02193240687116,
      40.576763424049055,
      -101.97806759312884,
      19.423236575950945,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -109.72926938431583,
      59.93146570706323,
      -100.27073061568417,
      40.06853429293677,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -111.10170215847752,
      79.15255323771628,
      -98.89829784152248,
      60.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -67.49449924603988,
      -61.95839204932844,
      -82.50550075396012,
      -78.04160795067156,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -68.89829784152248,
      -40.84744676228372,
      -81.10170215847752,
      -59.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -70.91470256010486,
      -19.786756400262146,
      -79.08529743989514,
      -40.21324359973785,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -73.5461990789988,
      0.9035069075089819,
      -76.4538009210012,
      -20.903506907508984,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -76.4538009210012,
      20.903506907508984,
      -73.5461990789988,
      -0.9035069075089819,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -79.08529743989514,
      40.21324359973785,
      -70.91470256010486,
      19.786756400262146,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -81.10170215847752,
      59.15255323771628,
      -68.89829784152248,
      40.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -82.50550075396012,
      78.04160795067156,
      -67.49449924603988,
      61.95839204932844,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -35.74703677085791,
      -64.05166649555152,
      -54.25296322914209,
      -75.94833350444848,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -36.82376439128117,
      -42.64138795215305,
      -53.17623560871883,
      -57.35861204784695,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -38.89829784152248,
      -20.84744676228372,
      -51.10170215847752,
      -39.152553237716276,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -42.61376496399478,
      0.7380576620234809,
      -47.38623503600522,
      -20.73805766202348,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -47.38623503600522,
      20.73805766202348,
      -42.61376496399478,
      -0.7380576620234809,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -51.10170215847752,
      39.152553237716276,
      -38.89829784152248,
      20.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -53.17623560871883,
      57.35861204784695,
      -36.82376439128117,
      42.64138795215305,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -54.25296322914209,
      75.94833350444848,
      -35.74703677085791,
      64.05166649555152,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -4.244173445148496,
      -67.69518002396039,
      -25.755826554851502,
      -72.30481997603961,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -4.463910862567335,
      -46.8391732587702,
      -25.536089137432665,
      -53.1608267412298,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -5.161300899000926,
      -25.080650449500464,
      -24.838699100999072,
      -34.91934955049954,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -8.89829784152248,
      -0.8474467622837185,
      -21.101702158477522,
      -19.152553237716283,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -21.101702158477522,
      19.152553237716283,
      -8.89829784152248,
      0.8474467622837185,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -24.838699100999072,
      34.91934955049954,
      -5.161300899000926,
      25.080650449500464,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -25.536089137432665,
      53.1608267412298,
      -4.463910862567335,
      46.8391732587702,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      -25.755826554851502,
      72.30481997603961,
      -4.244173445148496,
      67.69518002396039,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      25.755826554851502,
      -72.30481997603961,
      4.244173445148496,
      -67.69518002396039,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      25.536089137432665,
      -53.1608267412298,
      4.463910862567335,
      -46.8391732587702,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      24.838699100999072,
      -34.91934955049954,
      5.161300899000926,
      -25.080650449500464,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      21.101702158477522,
      -19.152553237716283,
      8.89829784152248,
      -0.8474467622837185,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      8.89829784152248,
      0.8474467622837185,
      21.101702158477522,
      19.152553237716283,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      5.161300899000926,
      25.080650449500464,
      24.838699100999072,
      34.91934955049954,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      4.463910862567335,
      46.8391732587702,
      25.536089137432665,
      53.1608267412298,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      4.244173445148496,
      67.69518002396039,
      25.755826554851502,
      72.30481997603961,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      54.25296322914209,
      -75.94833350444848,
      35.74703677085791,
      -64.05166649555152,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      53.17623560871883,
      -57.35861204784695,
      36.82376439128117,
      -42.64138795215305,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      51.10170215847752,
      -39.152553237716276,
      38.89829784152248,
      -20.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      47.38623503600522,
      -20.73805766202348,
      42.61376496399478,
      0.7380576620234809,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      42.61376496399478,
      -0.7380576620234809,
      47.38623503600522,
      20.73805766202348,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      38.89829784152248,
      20.84744676228372,
      51.10170215847752,
      39.152553237716276,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      36.82376439128117,
      42.64138795215305,
      53.17623560871883,
      57.35861204784695,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      35.74703677085791,
      64.05166649555152,
      54.25296322914209,
      75.94833350444848,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      82.50550075396012,
      -78.04160795067156,
      67.49449924603988,
      -61.95839204932844,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      81.10170215847752,
      -59.15255323771628,
      68.89829784152248,
      -40.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      79.08529743989514,
      -40.21324359973785,
      70.91470256010486,
      -19.786756400262146,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      76.4538009210012,
      -20.903506907508984,
      73.5461990789988,
      0.9035069075089819,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      73.5461990789988,
      -0.9035069075089819,
      76.4538009210012,
      20.903506907508984,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      70.91470256010486,
      19.786756400262146,
      79.08529743989514,
      40.21324359973785,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      68.89829784152248,
      40.84744676228372,
      81.10170215847752,
      59.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      67.49449924603988,
      61.95839204932844,
      82.50550075396012,
      78.04160795067156,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      111.10170215847752,
      -79.15255323771628,
      98.89829784152248,
      -60.84744676228372,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      109.72926938431583,
      -59.93146570706323,
      100.27073061568417,
      -40.06853429293677,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      108.02193240687116,
      -40.576763424049055,
      101.97806759312884,
      -19.423236575950945,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      106.04290001890794,
      -20.950450198533474,
      103.95709998109206,
      0.9504501985334723,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      103.95709998109206,
      -0.9504501985334723,
      106.04290001890794,
      20.950450198533474,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      101.97806759312884,
      19.423236575950945,
      108.02193240687116,
      40.576763424049055,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      100.27073061568417,
      40.06853429293677,
      109.72926938431583,
      59.93146570706323,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
  {
    "fill": "#38bdf8",
    "listening": false,
    "opacity": 1,
    "pointerLength": 6.6,
    "pointerWidth": 5.5,
    "points": [
      98.89829784152248,
      60.84744676228372,
      111.10170215847752,
      79.15255323771628,
    ],
    "stroke": "#38bdf8",
    "strokeWidth": 1,
  },
]
`;

exports[`data-object configs > vector field hit cfg stable 1`] = `
{
  "cornerRadius": 4,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(56,189,248,0.04)",
  "height": 160,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1,
  "width": 240,
  "x": -120,
  "y": -80,
}
`;

exports[`objects3d configs > axes3d lines stable 1`] = `
[
  {
    "listening": false,
    "points": [
      484,
      266,
      574,
      266,
    ],
    "stroke": "#ff6b6b",
    "strokeWidth": 2,
  },
  {
    "listening": false,
    "points": [
      484,
      266,
      484,
      86,
    ],
    "stroke": "#69db7c",
    "strokeWidth": 2,
  },
  {
    "listening": false,
    "points": [
      484,
      266,
      394,
      266,
    ],
    "stroke": "#74c0fc",
    "strokeWidth": 2,
  },
]
`;

exports[`objects3d configs > cube faces stable 1`] = `
[
  {
    "closed": true,
    "depth": -0.5122595264191645,
    "fill": "#085d41",
    "opacity": 1,
    "points": [
      0,
      -45,
      45,
      -45,
      0,
      -45,
      -45,
      -45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "depth": -0.5122595264191645,
    "fill": "#085d41",
    "opacity": 1,
    "points": [
      0,
      45,
      0,
      -45,
      -45,
      -45,
      -45,
      45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "depth": -0.19411428382689055,
    "fill": "#085d41",
    "opacity": 1,
    "points": [
      0,
      45,
      45,
      45,
      45,
      -45,
      0,
      -45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "depth": 0.19411428382689055,
    "fill": "#0a7753",
    "opacity": 1,
    "points": [
      -45,
      45,
      0,
      45,
      0,
      -45,
      -45,
      -45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "depth": 0.5122595264191645,
    "fill": "#0ea271",
    "opacity": 1,
    "points": [
      0,
      45,
      45,
      45,
      0,
      45,
      -45,
      45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "depth": 0.5122595264191645,
    "fill": "#0ea271",
    "opacity": 1,
    "points": [
      45,
      45,
      45,
      -45,
      0,
      -45,
      0,
      45,
    ],
    "stroke": "#06412d",
    "strokeWidth": 1,
  },
]
`;

exports[`objects3d configs > obj3dCenter stable 1`] = `
{
  "draggable": true,
  "x": 484,
  "y": 266,
}
`;

exports[`objects3d configs > round3dParts cone stable 1`] = `
[
  {
    "closed": true,
    "fill": "#935f07",
    "opacity": 1,
    "points": [
      46.5,
      0,
      45.898269892363714,
      -10.681004829903088,
      44.1232528296581,
      -20.826419477642787,
      41.26395557923274,
      -29.927510489219202,
      37.463755244609615,
      -37.52791115846543,
      32.913209738821365,
      -43.246505659316114,
      27.840502414951573,
      -46.79653978472754,
      22.5,
      -48,
      17.159497585048484,
      -46.79653978472754,
      12.086790261178578,
      -43.246505659316114,
      7.536244755390385,
      -37.52791115846543,
      3.736044420767314,
      -29.92751048921923,
      0.8767471703419574,
      -20.826419477642787,
      -0.8982698923637713,
      -10.681004829903088,
      -1.5,
      0,
      -0.8982698923637713,
      10.681004829903088,
      0.8767471703419574,
      20.826419477642787,
      3.736044420767257,
      29.927510489219173,
      7.536244755390385,
      37.52791115846543,
      12.086790261178578,
      43.24650565931614,
      17.159497585048427,
      46.79653978472754,
      22.5,
      48,
      27.840502414951516,
      46.79653978472754,
      32.913209738821365,
      43.24650565931614,
      37.463755244609615,
      37.52791115846543,
      41.26395557923274,
      29.92751048921923,
      44.1232528296581,
      20.826419477642787,
      45.898269892363714,
      10.681004829903088,
    ],
    "stroke": "#623f04",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "fill": "#f59e0b",
    "opacity": 1,
    "points": [
      -22.5,
      0,
      12.086790261178578,
      -43.246505659316114,
      17.159497585048484,
      -46.79653978472754,
      22.5,
      -48,
      27.840502414951573,
      -46.79653978472754,
      32.913209738821365,
      -43.246505659316114,
      37.463755244609615,
      -37.52791115846543,
      41.26395557923274,
      -29.927510489219202,
      44.1232528296581,
      -20.826419477642787,
      45.898269892363714,
      -10.681004829903088,
      46.5,
      0,
      45.898269892363714,
      10.681004829903088,
      44.1232528296581,
      20.826419477642787,
      41.26395557923274,
      29.92751048921923,
      37.463755244609615,
      37.52791115846543,
      32.913209738821365,
      43.24650565931614,
      27.840502414951516,
      46.79653978472754,
      22.5,
      48,
      17.159497585048427,
      46.79653978472754,
      12.086790261178578,
      43.24650565931614,
    ],
    "stroke": "#623f04",
    "strokeWidth": 1,
  },
]
`;

exports[`objects3d configs > round3dParts cylinder stable 1`] = `
[
  {
    "closed": true,
    "fill": "#6442b1",
    "opacity": 1,
    "points": [
      -40.5,
      0,
      -40.04870241927284,
      -8.01075362242733,
      -38.717439622243546,
      -15.619814608232105,
      -36.5729666844245,
      -22.445632866914423,
      -33.72281643345718,
      -28.145933368849086,
      -30.309907304116052,
      -32.43487924448709,
      -26.505376811213637,
      -35.09740483854566,
      -22.5,
      -36,
      22.5,
      -36,
      26.505376811213637,
      -35.09740483854566,
      30.309907304115995,
      -32.43487924448709,
      33.72281643345718,
      -28.145933368849057,
      36.5729666844245,
      -22.445632866914394,
      38.717439622243546,
      -15.619814608232105,
      40.048702419272786,
      -8.01075362242733,
      40.5,
      0,
      40.048702419272786,
      8.01075362242733,
      38.717439622243546,
      15.619814608232105,
      36.5729666844245,
      22.445632866914423,
      33.72281643345718,
      28.145933368849057,
      30.309907304115995,
      32.43487924448709,
      26.505376811213637,
      35.09740483854563,
      22.5,
      36,
      -22.5,
      36,
      -26.505376811213637,
      35.09740483854563,
      -30.309907304116052,
      32.43487924448709,
      -33.72281643345718,
      28.145933368849057,
      -36.57296668442456,
      22.445632866914366,
      -38.717439622243546,
      15.619814608232105,
      -40.04870241927284,
      8.01075362242733,
    ],
    "stroke": "#382562",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "fill": "#a46dff",
    "opacity": 1,
    "points": [
      -4.5,
      0,
      -4.951297580727157,
      -8.01075362242733,
      -6.282560377756454,
      -15.619814608232105,
      -8.427033315575443,
      -22.445632866914394,
      -11.277183566542817,
      -28.145933368849057,
      -14.690092695883948,
      -32.43487924448709,
      -18.494623188786363,
      -35.09740483854566,
      -22.5,
      -36,
      -26.505376811213637,
      -35.09740483854566,
      -30.309907304116052,
      -32.43487924448709,
      -33.72281643345718,
      -28.145933368849086,
      -36.5729666844245,
      -22.445632866914423,
      -38.717439622243546,
      -15.619814608232105,
      -40.04870241927284,
      -8.01075362242733,
      -40.5,
      0,
      -40.04870241927284,
      8.01075362242733,
      -38.717439622243546,
      15.619814608232105,
      -36.57296668442456,
      22.445632866914366,
      -33.72281643345718,
      28.145933368849057,
      -30.309907304116052,
      32.43487924448709,
      -26.505376811213637,
      35.09740483854563,
      -22.5,
      36,
      -18.494623188786363,
      35.09740483854563,
      -14.690092695883948,
      32.43487924448709,
      -11.277183566542817,
      28.145933368849057,
      -8.427033315575443,
      22.445632866914423,
      -6.282560377756454,
      15.619814608232105,
      -4.951297580727157,
      8.01075362242733,
    ],
    "stroke": "#382562",
    "strokeWidth": 1,
  },
]
`;

exports[`objects3d configs > sphere config stable 1`] = `
{
  "draggable": true,
  "fillRadialGradientColorStops": [
    0,
    "#5bcaff",
    0.55,
    "#3B82F6",
    1,
    "#1b3b6f",
  ],
  "fillRadialGradientEndPoint": {
    "x": 0,
    "y": 0,
  },
  "fillRadialGradientEndRadius": 69,
  "fillRadialGradientStartPoint": {
    "x": -21,
    "y": -21,
  },
  "fillRadialGradientStartRadius": 3,
  "opacity": 1,
  "radius": 60,
  "stroke": "#183462",
  "strokeWidth": 1,
  "x": 484,
  "y": 266,
}
`;

exports[`objects3d configs > torus outline stable 1`] = `
[
  {
    "closed": true,
    "listening": false,
    "points": [
      45,
      0,
      43.87175604818208,
      -20.026884056068297,
      40.543599055608865,
      -39.04953652058023,
      35.182416711061364,
      -56.11408216728603,
      28.057041083642957,
      -70.36483342212267,
      19.524768260290102,
      -81.08719811121773,
      10.013442028034149,
      -87.74351209636413,
      0,
      -90,
      -10.013442028034149,
      -87.74351209636413,
      -19.524768260290102,
      -81.08719811121773,
      -28.057041083643014,
      -70.36483342212267,
      -35.182416711061364,
      -56.11408216728603,
      -40.543599055608865,
      -39.04953652058023,
      -43.87175604818208,
      -20.026884056068297,
      -45,
      0,
      -43.87175604818208,
      20.026884056068297,
      -40.543599055608865,
      39.049536520580205,
      -35.182416711061364,
      56.11408216728597,
      -28.057041083643014,
      70.36483342212267,
      -19.524768260290102,
      81.08719811121773,
      -10.013442028034149,
      87.74351209636416,
      0,
      90,
      10.013442028034149,
      87.74351209636416,
      19.524768260290102,
      81.08719811121773,
      28.057041083642957,
      70.36483342212267,
      35.182416711061364,
      56.11408216728603,
      40.543599055608865,
      39.04953652058026,
      43.87175604818208,
      20.026884056068297,
    ],
    "stroke": "#6c1f1f",
    "strokeWidth": 1,
  },
  {
    "closed": true,
    "listening": false,
    "points": [
      27,
      0,
      26.323053628909236,
      -12.016130433640967,
      24.32615943336532,
      -23.42972191234813,
      21.109450026636807,
      -33.668449300371606,
      16.83422465018583,
      -42.218900053273615,
      11.71486095617405,
      -48.65231886673064,
      6.008065216820512,
      -52.64610725781847,
      0,
      -54,
      -6.008065216820512,
      -52.64610725781847,
      -11.71486095617405,
      -48.65231886673064,
      -16.834224650185774,
      -42.218900053273615,
      -21.109450026636807,
      -33.668449300371606,
      -24.32615943336532,
      -23.429721912348157,
      -26.323053628909236,
      -12.016130433640967,
      -27,
      0,
      -26.323053628909236,
      12.016130433640967,
      -24.32615943336532,
      23.429721912348157,
      -21.109450026636807,
      33.668449300371606,
      -16.83422465018583,
      42.218900053273615,
      -11.71486095617405,
      48.65231886673064,
      -6.008065216820512,
      52.64610725781847,
      0,
      54,
      6.008065216820455,
      52.64610725781847,
      11.71486095617405,
      48.65231886673064,
      16.834224650185774,
      42.218900053273615,
      21.109450026636807,
      33.668449300371606,
      24.32615943336532,
      23.429721912348157,
      26.323053628909236,
      12.016130433640967,
    ],
    "stroke": "#6c1f1f",
    "strokeWidth": 1,
  },
]
`;

exports[`objects3d configs > torus tube stable 1`] = `
[
  {
    "fill": "#7b2323",
    "opacity": 1,
    "radius": 18,
    "x": -25.45584412271569,
    "y": -50.911688245431435,
  },
  {
    "fill": "#7b2323",
    "opacity": 1,
    "radius": 18,
    "x": -22.445632866914423,
    "y": -56.29186673769814,
  },
  {
    "fill": "#7b2323",
    "opacity": 1,
    "radius": 18,
    "x": -28.145933368849057,
    "y": -44.89126573382882,
  },
  {
    "fill": "#7d2323",
    "opacity": 1,
    "radius": 18,
    "x": -19.153154754552133,
    "y": -60.96414234443648,
  },
  {
    "fill": "#7d2323",
    "opacity": 1,
    "radius": 18,
    "x": -30.48207117221824,
    "y": -38.30630950910424,
  },
  {
    "fill": "#7f2424",
    "opacity": 1,
    "radius": 18,
    "x": -15.619814608232105,
    "y": -64.86975848897418,
  },
  {
    "fill": "#7f2424",
    "opacity": 1,
    "radius": 18,
    "x": -32.43487924448709,
    "y": -31.23962921646418,
  },
  {
    "fill": "#832525",
    "opacity": 1,
    "radius": 18,
    "x": -33.97979989110121,
    "y": -23.78009246077204,
  },
  {
    "fill": "#832525",
    "opacity": 1,
    "radius": 18,
    "x": -11.89004623038602,
    "y": -67.95959978220247,
  },
  {
    "fill": "#882727",
    "opacity": 1,
    "radius": 18,
    "x": -35.09740483854563,
    "y": -16.021507244854632,
  },
  {
    "fill": "#882727",
    "opacity": 1,
    "radius": 18,
    "x": -8.01075362242733,
    "y": -70.19480967709131,
  },
  {
    "fill": "#8d2828",
    "opacity": 1,
    "radius": 18,
    "x": -35.77363955615675,
    "y": -8.061442279438154,
  },
  {
    "fill": "#8d2828",
    "opacity": 1,
    "radius": 18,
    "x": -4.030721139719105,
    "y": -71.54727911231345,
  },
  {
    "fill": "#942a2a",
    "opacity": 1,
    "radius": 18,
    "x": -36,
    "y": 0,
  },
  {
    "fill": "#942a2a",
    "opacity": 1,
    "radius": 18,
    "x": 0,
    "y": -72,
  },
  {
    "fill": "#9b2c2c",
    "opacity": 1,
    "radius": 18,
    "x": 4.030721139719105,
    "y": -71.54727911231345,
  },
  {
    "fill": "#9b2c2c",
    "opacity": 1,
    "radius": 18,
    "x": -35.77363955615675,
    "y": 8.06144227943821,
  },
  {
    "fill": "#a32e2e",
    "opacity": 1,
    "radius": 18,
    "x": -35.09740483854563,
    "y": 16.021507244854604,
  },
  {
    "fill": "#a32e2e",
    "opacity": 1,
    "radius": 18,
    "x": 8.01075362242733,
    "y": -70.19480967709131,
  },
  {
    "fill": "#ac3131",
    "opacity": 1,
    "radius": 18,
    "x": -33.97979989110121,
    "y": 23.78009246077204,
  },
  {
    "fill": "#ac3131",
    "opacity": 1,
    "radius": 18,
    "x": 11.89004623038602,
    "y": -67.95959978220247,
  },
  {
    "fill": "#b53333",
    "opacity": 1,
    "radius": 18,
    "x": -32.43487924448709,
    "y": 31.239629216464152,
  },
  {
    "fill": "#b53333",
    "opacity": 1,
    "radius": 18,
    "x": 15.619814608232105,
    "y": -64.86975848897418,
  },
  {
    "fill": "#be3636",
    "opacity": 1,
    "radius": 18,
    "x": -30.48207117221824,
    "y": 38.30630950910421,
  },
  {
    "fill": "#be3636",
    "opacity": 1,
    "radius": 18,
    "x": 19.153154754552133,
    "y": -60.96414234443645,
  },
  {
    "fill": "#c73939",
    "opacity": 1,
    "radius": 18,
    "x": -28.145933368849114,
    "y": 44.89126573382879,
  },
  {
    "fill": "#c73939",
    "opacity": 1,
    "radius": 18,
    "x": 22.445632866914423,
    "y": -56.29186673769814,
  },
  {
    "fill": "#d13b3b",
    "opacity": 1,
    "radius": 18,
    "x": -25.45584412271569,
    "y": 50.911688245431435,
  },
  {
    "fill": "#d13c3c",
    "opacity": 1,
    "radius": 18,
    "x": 25.45584412271569,
    "y": -50.91168824543141,
  },
  {
    "fill": "#db3e3e",
    "opacity": 1,
    "radius": 18,
    "x": -22.445632866914423,
    "y": 56.291866737698115,
  },
  {
    "fill": "#db3e3e",
    "opacity": 1,
    "radius": 18,
    "x": 28.145933368849114,
    "y": -44.89126573382882,
  },
  {
    "fill": "#e44141",
    "opacity": 1,
    "radius": 18,
    "x": -19.153154754552133,
    "y": 60.96414234443648,
  },
  {
    "fill": "#e44141",
    "opacity": 1,
    "radius": 18,
    "x": 30.482071172218184,
    "y": -38.30630950910424,
  },
  {
    "fill": "#ee4444",
    "opacity": 1,
    "radius": 18,
    "x": -15.619814608232105,
    "y": 64.86975848897418,
  },
  {
    "fill": "#ee4444",
    "opacity": 1,
    "radius": 18,
    "x": 32.43487924448709,
    "y": -31.23962921646418,
  },
  {
    "fill": "#f74646",
    "opacity": 1,
    "radius": 18,
    "x": -11.89004623038602,
    "y": 67.95959978220247,
  },
  {
    "fill": "#f74646",
    "opacity": 1,
    "radius": 18,
    "x": 33.979799891101266,
    "y": -23.78009246077204,
  },
  {
    "fill": "#ff4949",
    "opacity": 1,
    "radius": 18,
    "x": -8.01075362242733,
    "y": 70.19480967709131,
  },
  {
    "fill": "#ff4949",
    "opacity": 1,
    "radius": 18,
    "x": 35.097404838545685,
    "y": -16.021507244854632,
  },
  {
    "fill": "#ff4b4b",
    "opacity": 1,
    "radius": 18,
    "x": -4.030721139719105,
    "y": 71.54727911231345,
  },
  {
    "fill": "#ff4b4b",
    "opacity": 1,
    "radius": 18,
    "x": 35.773639556156695,
    "y": -8.061442279438154,
  },
  {
    "fill": "#ff4d4d",
    "opacity": 1,
    "radius": 18,
    "x": 0,
    "y": 72,
  },
  {
    "fill": "#ff4d4d",
    "opacity": 1,
    "radius": 18,
    "x": 36,
    "y": 0,
  },
  {
    "fill": "#ff4f4f",
    "opacity": 1,
    "radius": 18,
    "x": 4.0307211397190486,
    "y": 71.54727911231345,
  },
  {
    "fill": "#ff4f4f",
    "opacity": 1,
    "radius": 18,
    "x": 35.773639556156695,
    "y": 8.06144227943821,
  },
  {
    "fill": "#ff5050",
    "opacity": 1,
    "radius": 18,
    "x": 8.01075362242733,
    "y": 70.19480967709131,
  },
  {
    "fill": "#ff5050",
    "opacity": 1,
    "radius": 18,
    "x": 35.097404838545685,
    "y": 16.02150724485466,
  },
  {
    "fill": "#ff5252",
    "opacity": 1,
    "radius": 18,
    "x": 11.89004623038602,
    "y": 67.95959978220247,
  },
  {
    "fill": "#ff5252",
    "opacity": 1,
    "radius": 18,
    "x": 33.979799891101266,
    "y": 23.78009246077204,
  },
  {
    "fill": "#ff5353",
    "opacity": 1,
    "radius": 18,
    "x": 15.619814608232105,
    "y": 64.86975848897418,
  },
  {
    "fill": "#ff5353",
    "opacity": 1,
    "radius": 18,
    "x": 32.43487924448709,
    "y": 31.23962921646421,
  },
  {
    "fill": "#ff5454",
    "opacity": 1,
    "radius": 18,
    "x": 19.153154754552133,
    "y": 60.96414234443648,
  },
  {
    "fill": "#ff5454",
    "opacity": 1,
    "radius": 18,
    "x": 30.482071172218184,
    "y": 38.30630950910427,
  },
  {
    "fill": "#ff5454",
    "opacity": 1,
    "radius": 18,
    "x": 22.445632866914423,
    "y": 56.29186673769817,
  },
  {
    "fill": "#ff5454",
    "opacity": 1,
    "radius": 18,
    "x": 28.145933368849114,
    "y": 44.891265733828845,
  },
  {
    "fill": "#ff5454",
    "opacity": 1,
    "radius": 18,
    "x": 25.45584412271569,
    "y": 50.911688245431435,
  },
]
`;

exports[`relational configs > angle arc stable 1`] = `
{
  "listening": false,
  "points": [
    1080.0168752636762,
    0,
    1059.2646538457054,
    210.7008399780432,
    997.8054858229058,
    413.30456483812264,
    898.0012125556952,
    600.0252270553432,
    763.6872562948511,
    763.687256294851,
    600.0252270553433,
    898.0012125556952,
    413.3045648381227,
    997.8054858229058,
    210.7008399780433,
    1059.2646538457054,
    6.613196046583936e-14,
    1080.0168752636762,
    -210.70083997804315,
    1059.2646538457054,
    -413.3045648381226,
    997.8054858229058,
    -600.025227055343,
    898.0012125556954,
    -763.687256294851,
    763.6872562948511,
    -898.0012125556949,
    600.0252270553435,
    -997.8054858229058,
    413.30456483812276,
    -1059.2646538457054,
    210.7008399780436,
    -1080.0168752636762,
    1.3226392093167872e-13,
    -1059.2646538457054,
    -210.70083997804332,
    -997.805485822906,
    -413.30456483812253,
    -898.0012125556955,
    -600.025227055343,
    -763.6872562948513,
    -763.687256294851,
    -600.0252270553432,
    -898.0012125556952,
    -413.3045648381232,
    -997.8054858229056,
    -210.70083997804366,
    -1059.2646538457052,
    -1.983958813975181e-13,
    -1080.0168752636762,
  ],
  "stroke": "#FFFFFF",
  "strokeWidth": 2,
}
`;

exports[`relational configs > angle rays stable 1`] = `
[
  {
    "listening": false,
    "points": [
      0,
      0,
      24,
      0,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
  {
    "listening": false,
    "points": [
      0,
      0,
      0,
      -24,
    ],
    "stroke": "#FFFFFF",
    "strokeWidth": 2,
  },
]
`;

exports[`relational configs > brace line stable 1`] = `
{
  "lineJoin": "round",
  "listening": false,
  "points": [
    -32,
    0,
    -32,
    5.6000000000000005,
    0,
    5.6000000000000005,
    32,
    5.6000000000000005,
    32,
    0,
  ],
  "stroke": "#FFFFFF",
  "strokeWidth": 2,
  "tension": 0.4,
}
`;

exports[`shapes2d > annulus config is stable 1`] = `
{
  "draggable": true,
  "fill": "#6366F1",
  "hitStrokeWidth": 10,
  "id": "ann1",
  "innerRadius": 14,
  "name": "stageObject",
  "opacity": 1,
  "outerRadius": 28,
  "rotation": 0,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > arc config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 12,
  "id": "arc1",
  "name": "stageObject",
  "opacity": 1,
  "sceneFunc": [Function],
  "stroke": "#F97316",
  "strokeWidth": 0.8,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > arrow config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 16,
  "id": "arr1",
  "name": "stageObject",
  "opacity": 1,
  "pointerLength": 2.8000000000000003,
  "pointerWidth": 2.4000000000000004,
  "points": [
    -56,
    0,
    56,
    0,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#EF4444",
  "strokeWidth": 2,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > circle config is stable 1`] = `
{
  "draggable": true,
  "fill": "#3B82F6",
  "hitStrokeWidth": 10,
  "id": "circ1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 32,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > dot config is stable 1`] = `
{
  "draggable": true,
  "fill": "#F59E0B",
  "hitStrokeWidth": 12,
  "id": "dot1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 8,
  "x": 300,
  "y": 170,
}
`;

exports[`shapes2d > double_arrow config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 12,
  "id": "da1",
  "name": "stageObject",
  "opacity": 1,
  "pointerAtBeginning": true,
  "pointerAtEnding": true,
  "pointerLength": 2.8000000000000003,
  "pointerWidth": 2.4000000000000004,
  "points": [
    -60,
    0,
    60,
    0,
  ],
  "rotation": 0,
  "stroke": "#EF4444",
  "strokeWidth": 2.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > ellipse config is stable 1`] = `
{
  "draggable": true,
  "fill": "#8B5CF6",
  "hitStrokeWidth": 10,
  "id": "ell1",
  "name": "stageObject",
  "opacity": 1,
  "radiusX": 40,
  "radiusY": 24,
  "rotation": 15,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 380,
  "y": 210,
}
`;

exports[`shapes2d > heart config is stable 1`] = `
{
  "draggable": true,
  "fill": "#EF4444",
  "hitStrokeWidth": 10,
  "id": "hrt1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "sceneFunc": [Function],
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 420,
  "y": 250,
}
`;

exports[`shapes2d > line config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 16,
  "id": "line1",
  "lineCap": "round",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    -60,
    0,
    60,
    0,
  ],
  "rotation": 0,
  "stroke": "#94A3B8",
  "strokeWidth": 2,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > parametric config is stable 1`] = `
{
  "draggable": true,
  "hitStrokeWidth": 12,
  "id": "par1",
  "lineCap": "round",
  "name": "stageObject",
  "opacity": 1,
  "points": [],
  "rotation": 0,
  "stroke": "#10B981",
  "strokeWidth": 0.8,
  "tension": 0.3,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > polygon config is stable 1`] = `
{
  "draggable": true,
  "fill": "#06B6D4",
  "hitStrokeWidth": 10,
  "id": "poly1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 36,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "sides": 6,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > polygon_free config is stable 1`] = `
{
  "closed": true,
  "draggable": true,
  "fill": "#84CC16",
  "hitStrokeWidth": 10,
  "id": "pf1",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    -16,
    16,
    16,
    16,
    0,
    -20,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > rectangle config is stable 1`] = `
{
  "cornerRadius": 6.4,
  "draggable": true,
  "fill": "#3B82F6",
  "height": 48,
  "hitStrokeWidth": 10,
  "id": "rect1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "width": 80,
  "x": 444,
  "y": 242,
}
`;

exports[`shapes2d > sector config is stable 1`] = `
{
  "angle": 120,
  "draggable": true,
  "fill": "#EC4899",
  "hitStrokeWidth": 10,
  "id": "sec1",
  "name": "stageObject",
  "opacity": 1,
  "radius": 28,
  "rotation": 0,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 266,
}
`;

exports[`shapes2d > square config is stable 1`] = `
{
  "cornerRadius": 8,
  "draggable": true,
  "fill": "#10B981",
  "height": 60,
  "hitStrokeWidth": 10,
  "id": "sq1",
  "name": "stageObject",
  "opacity": 1,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "width": 60,
  "x": 230,
  "y": 140,
}
`;

exports[`shapes2d > star config is stable 1`] = `
{
  "draggable": true,
  "fill": "#FBBF24",
  "hitStrokeWidth": 10,
  "id": "star1",
  "innerRadius": 12.8,
  "name": "stageObject",
  "numPoints": 5,
  "opacity": 1,
  "outerRadius": 32,
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 484,
  "y": 210,
}
`;

exports[`shapes2d > triangle config is stable 1`] = `
{
  "closed": true,
  "draggable": true,
  "fill": "#F97316",
  "hitStrokeWidth": 10,
  "id": "tri1",
  "name": "stageObject",
  "opacity": 1,
  "points": [
    0,
    -28,
    32,
    28,
    -32,
    28,
  ],
  "rotation": 0,
  "scaleX": 1,
  "scaleY": 1,
  "stroke": "#FFFFFF",
  "strokeWidth": 0.4,
  "x": 340,
  "y": 210,
}
`;

exports[`text configs > counter config is stable 1`] = `
{
  "draggable": true,
  "fill": "#10B981",
  "fontFamily": "Arial",
  "fontSize": 32,
  "fontStyle": "",
  "hitStrokeWidth": 10,
  "id": "cnt1",
  "name": "stageObject",
  "offsetX": 0,
  "offsetY": 16,
  "opacity": 1,
  "rotation": 0,
  "text": "42.0%",
  "x": 484,
  "y": 266,
}
`;

exports[`text configs > latex bg config is stable 1`] = `
{
  "cornerRadius": 6,
  "dash": [
    6,
    4,
  ],
  "fill": "rgba(76,238,249,0.06)",
  "height": 32,
  "listening": true,
  "stroke": "#4CEEF9",
  "strokeWidth": 1.5,
  "width": 120,
  "x": -60,
  "y": -16,
}
`;

exports[`text configs > latex text config is stable 1`] = `
{
  "align": "center",
  "fill": "#FFFFFF",
  "fontFamily": "serif",
  "fontSize": 12,
  "fontStyle": "italic",
  "height": 32,
  "listening": false,
  "padding": 8,
  "text": "E = mc²",
  "verticalAlign": "middle",
  "width": 120,
  "x": -60,
  "y": -16,
}
`;

exports[`text configs > text config is stable 1`] = `
{
  "draggable": true,
  "fill": "#FFFFFF",
  "fontFamily": "Roboto",
  "fontSize": 19.200000000000003,
  "fontStyle": "",
  "hitStrokeWidth": 10,
  "id": "txt1",
  "name": "stageObject",
  "offsetX": 0,
  "offsetY": 9.600000000000001,
  "opacity": 1,
  "rotation": 0,
  "text": "Hello",
  "x": 484,
  "y": 170,
}
`;
